Fix word wrap for Chrome

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,6 +82,7 @@ table.votes thead tr th:nth-child(5) { width: 320px; }
 
 p {
 	word-wrap: break-word;
+	word-break: break-word;
 }
 
 /* Hide Box */
